Thu Nov 25 09:15:39 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/examples/Log/Event/Log_Event.mpc:
	* orbsvcs/examples/Log/Notify/Log_Notify.mpc:
	* orbsvcs/examples/Log/RTEvent/Log_RTEvent.mpc:

	  Changed exename definitions from consumer and supplier to
	  Event_Consumer, Event_Supplier, etc. to match description
	  in the README files.

Wed Nov 24 21:21:50 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/examples/Log/README:

          Convert from DOS to UNIX text format.

Wed Nov 24 18:38:29 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/tests/Log/Basic_Log_Test/Log_Basic_Log_Test.mpc:

          Added exename definition.

Wed Nov 24 17:08:25 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/run_test.pl:
	* orbsvcs/tests/FaultTolerance/IOGRManipulation/run_test.pl:

	  New files.

Wed Nov 24 17:01:22 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/TAO_Service/README:

	  Update to reflect fact that services have been refactored
	  into stub, skeleton, and implementation/service libraries.

Wed Nov 24 14:35:35 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:

          Removed generation of all ACE and TAO file includes in the
          skeleton source file if there is no non-local interface seen
          in the IDL file. Thanks once again to Johnny Willemsen
          <jwillemsen@remedy.nl> for making the suggestion.

Wed Nov 24 13:44:00 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Standard_Event_Persistence.h:
        * orbsvcs/orbsvcs/Notify/Standard_Event_Persistence.cpp:
        * orbsvcs/orbsvcs/Notify/XML_Topology_Factory.h:
        * orbsvcs/orbsvcs/Notify/XML_Topology_Factory.cpp:

          Moved the ACE_FACTORY_DECLARE out of the .cpp into the .h.

Wed Nov 24 13:16:59 2004  Chad Elliott  <elliott_c@ociweb.com>

        * performance-tests/Protocols/sender.cpp:
